--- a/WP/templates/WP/base.html
+++ b/WP/templates/WP/base.html
@@ -6,12 +6,13 @@
     <title>WeeklyPlanner</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    X-Content-Type-Options: nosniff
 </head>
     <body>
 
 
         <!-- top line with title and my account button -->
-        <header>
+        <header class="title">
             <div class="menu-btn">
                 <div class="menu-btn__burger"></div>
             </div>
