--- a/WP/templates/WP/login.html
+++ b/WP/templates/WP/login.html
@@ -21,18 +21,18 @@
             <table class="formTable" id="logForm">
                 <tr>
                     <td>
-                    <label for="username" class="popupTitles">Username</label>
-                    <br>
-                    <input type="text" name="username" required id="username">
-                    <br>
+                        <label for="username" class="popupTitles">Username</label>
+                        <br>
+                        <input type="text" name="username" required id="username">
+                        <br>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                    <label for="password" class="popupTitles">Password</label>
-                    <br>
-                    <input type="text" name="password" required id="password">
-                    <br>
+                        <label for="password" class="popupTitles">Password</label>
+                        <br>
+                        <input type="password" name="password" required id="password">
+                        <br>
                     </td>
                 </tr>
             </table>
