--- a/WP/static/css/styles.css
+++ b/WP/static/css/styles.css
@@ -279,7 +279,7 @@ h3{
     margin-top: 20px;
 }
 
-/* ---------- new task ------------------------------------------------------------------------- */
+/* ---------- forms ---------------------------------------------------------------------------- */
 
 .newTaskForm {
     visibility: visible;
@@ -289,7 +289,6 @@ h3{
     border: 3px solid slategrey;
     background-color: white;
     width: 40%;
-    height: 80%;
     top: 10%;
     z-index: 8;
     box-shadow: 0px 16px 32px 10px rgba(0,0,0,0.2);
@@ -297,9 +296,9 @@ h3{
     padding-top: 0;
   }
 
-/*#myForm{*/
-/*      height: 86%;*/
-/*}*/
+#myForm{
+      height: 86%;
+}
 
 #myFormLog{
       height: 50%;
@@ -473,15 +472,19 @@ body.forms{
     }
 
     #myFormLog{
-      height: 45%;
+        height: 45%;
+        width: 90%;
+
     }
 
     #myFormReg{
-        height: 60%;
-}
+        height: 50%;
+    }
+
+
 }
 
-/* ---------- tabel --------------------------------------------------------------------------- */
+/* ---------- table --------------------------------------------------------------------------- */
 
 .eventSection{
     align-items: center;
@@ -522,44 +525,7 @@ h5.day{
 }
 
 
-.weekView{
-    margin-top: 5px;
-    margin-bottom: 10px;
-    border-collapse: collapse;
-    width: 100%;
-    height: 40%;
-}
 
-td.weekView {
-    border-style: double;
-    border-color: black;
-    border-width: 2px;
-    height: 100px;
-    width: 14.28%;
-    border-collapse: collapse;
-}
-th.weekView {
-    border-style: double;
-    border-color: black;
-    border-width: 2px;
-    width: 14.28%;
-    border-collapse: collapse;
-    color: white;
-    background-color: slategrey;
-}
-
-@media screen and (max-width: 700px) {
-    td.weekView {
-        display: flex;
-        width: 100%;
-    }
-
-    th.weekView {
-        display: flex;
-        width: 100%;
-        height: 30px;
-    }
-}
 
 @media screen and (max-width: 600px) {
     .eventSectionSpan {
@@ -664,6 +630,17 @@ p.status{
     h5{
         background-color: slategrey;
         margin-top: 10px;
+        color: white;
+    }
+
+    #middle{
+        border-left: 2px solid lightgrey;
+        border-right: 2px solid lightgrey;
+    }
+
+    h3{
+        text-align: center;
+        font-size: 16pt;
     }
 }
 
