--- a/WP/templates/WP/base.html
+++ b/WP/templates/WP/base.html
@@ -7,7 +7,7 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     X-Content-Type-Options: nosniff
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
     <body>
 
