--- a/WP/templates/WP/register.html
+++ b/WP/templates/WP/register.html
@@ -5,6 +5,7 @@
     <title>WeeklyPlanner</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body class="forms">
 
